Added r6 classes for documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(c,rd)
 S3method(default_export,"NULL")
 S3method(default_export,default)
+S3method(default_export,r6class)
 S3method(default_export,rcclass)
 S3method(default_export,s3method)
 S3method(default_export,s4class)
@@ -48,6 +49,7 @@ S3method(merge,roxy_field_inherit_section)
 S3method(merge,roxy_field_minidesc)
 S3method(merge,roxy_field_reexport)
 S3method(merge,roxy_field_section)
+S3method(obj_type,"function")
 S3method(obj_type,MethodDefinition)
 S3method(obj_type,R6ClassGenerator)
 S3method(obj_type,R6MethodDef)
@@ -63,6 +65,7 @@ S3method(object_defaults,data)
 S3method(object_defaults,default)
 S3method(object_defaults,import)
 S3method(object_defaults,package)
+S3method(object_defaults,r6class)
 S3method(object_defaults,rcclass)
 S3method(object_defaults,s4class)
 S3method(object_defaults,s4method)
