Added a missign export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(format,roxy_field_minidesc)
 S3method(format,roxy_field_name)
 S3method(format,roxy_field_note)
 S3method(format,roxy_field_param)
+S3method(format,roxy_field_r6methods)
 S3method(format,roxy_field_rawRd)
 S3method(format,roxy_field_rcmethods)
 S3method(format,roxy_field_reexport)
